--- a/index.html
+++ b/index.html
@@ -185,27 +185,27 @@
         <h2 class="visually-hidden">Популярный каталог товаров</h2>
         <ul class="catalog__list">
           <li class="catalog__item">
-            <div class="catalog-item__img"></div>
+            <div class="catalog-item__img catalog-1"></div>
             <a class="catalog__link" href="#">Виртуальная реальность</a>
           </li>
           <li class="catalog__item">
-            <div class="catalog-item__img"></div>
+            <div class="catalog-item__img catalog-2"></div>
             <a class="catalog__link" href="catalog.html">Моноподы для селфи</a>
           </li>
           <li class="catalog__item">
-            <div class="catalog-item__img"></div>
+            <div class="catalog-item__img catalog-3"></div>
             <a class="catalog__link" href="#">Экшн-Камеры</a>
           </li>
           <li class="catalog__item">
-            <div class="catalog-item__img"></div>
+            <div class="catalog-item__img catalog-4"></div>
             <a class="catalog__link" href="#">Фитнес-браслеты</a>
           </li>
           <li class="catalog__item">
-            <div class="catalog-item__img"></div>
+            <div class="catalog-item__img catalog-5"></div>
             <a class="catalog__link" href="#">Умные часы</a>
           </li>
           <li class="catalog__item">
-            <div class="catalog-item__img"></div>
+            <div class="catalog-item__img catalog-6"></div>
             <a class="catalog__link" href="#">Квадрокоптеры</a>
           </li>
         </ul>
