Сделал эффект наведения прозрачностью а не подменой картинки

--- a/index.html
+++ b/index.html
@@ -252,22 +252,26 @@
         <ul class="popular-product__list">
           <li class="popular-product__item">
            <a class="popular-product__link">
-             <img class="popular-product__img img-1" src="img/brand_dji_bw.png" width="260" height="100" alt="Компания DJI">
+             <img class="popular-product__img img-1" src="img/brand_dji.png" width="260" height="100"
+             alt="Компания DJI">
            </a>
           </li>
           <li class="popular-product__item">
             <a class="popular-product__link">
-              <img class="popular-product__img img-2" src="img/brand_sp_gadgets_bw.png" width="260" height="100" alt="Компания SPGADGETS">
+              <img class="popular-product__img img-2" src="img/brand_sp_gadgets.png" width="260" height="100"
+              alt="Компания SPGADGETS">
             </a>
           </li>
           <li class="popular-product__item">
             <a class="popular-product__link">
-              <img class="popular-product__img img-3" src="img/brand_go_pro_bw.png" width="260" height="100" alt="Компания GO PRO">
+              <img class="popular-product__img img-3" src="img/brand_go_pro.png" width="260" height="100"
+              alt="Компания GO PRO">
             </a>
           </li>
           <li class="popular-product__item">
             <a class="popular-product__link">
-              <img class="popular-product__img img-4" src="img/brand_vive_bw.png" width="260" height="100" alt="Компания VIVE">
+              <img class="popular-product__img img-4" src="img/brand_vive.png" width="260" height="100"
+              alt="Компания VIVE">
             </a>
           </li>
         </ul>
