--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               </div>
             </div>
           </li>
-          <li class="slider__item slider_two">
+          <li class="slider__item slider_two visually-hidden">
             <div class="slide__product">
               <div>
                 <a class="slide__img" href="#">
@@ -143,7 +143,7 @@
               </div>
             </div>
           </li>
-          <li class="slider__item slider_three">
+          <li class="slider__item slider_three visually-hidden">
             <div class="slide__product">
               <div>
 <!--              <span class="slide__number">03</span>-->
@@ -172,9 +172,9 @@
           </li>
         </ul>
         <div class="slide__controls">
-          <button class="slide__controls slide__controls_active" type="button" aria-label="Первый слайд"></button>
-          <button class="slide__controls" type="button" aria-label="Второй слайд"></button>
-          <button class="slide__controls" type="button" aria-label="Третий слайд"></button>
+          <button class="slide__controls-btn slide__controls_active" type="button" aria-label="Первый слайд"></button>
+          <button class="slide__controls-btn" type="button" aria-label="Второй слайд"></button>
+          <button class="slide__controls-btn" type="button" aria-label="Третий слайд"></button>
         </div>
       </article>
     </header>
