--- a/index.html
+++ b/index.html
@@ -97,8 +97,6 @@
                 </a>
               </div>
               <div>
-<!--                Я предполагаю, что цифру на слайде нужно сделать псевдоэлементом иначе сетка не встает как нам нужно -->
-<!--                <span class="slide__number">01</span> -->
                 <p class="slide__title">Делай селфи,<br>как Бен Стиллер!</p>
                 <p class="slide__description">Самая длинная палка для селфи доступна в&nbsp;нашем магазине.<br>Восемь (Восемь,
                   Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
@@ -118,7 +116,7 @@
               </div>
             </div>
           </li>
-          <li class="slider__item slider_two visually-hidden">
+          <li class="slider__item slider_two">
             <div class="slide__product">
               <div>
                 <a class="slide__img" href="#">
@@ -126,8 +124,6 @@
                 </a>
               </div>
               <div>
-<!--              такой же псевдоэлемент-->
-<!--              <span class="slide__number">02</span>-->
                 <p class="slide__title">Худеем<br>правильно!</p>
                 <p class="slide__description">Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы<br>не&nbsp;пропускать
                   занятия и&nbsp;соблюдать диету.</p>
@@ -143,10 +139,9 @@
               </div>
             </div>
           </li>
-          <li class="slider__item slider_three visually-hidden">
+          <li class="slider__item slider_three">
             <div class="slide__product">
               <div>
-<!--              <span class="slide__number">03</span>-->
                 <a class="slide__img" href="#">
                   <img src="img/promo_3.png" width="526" height="334" alt="Квадрокоптер с&nbsp;мощным лазером,
                   замаскированным под стандартную камеру. &laquo;Бренд&raquo;">
