Сменил кнопки на ссылки

--- a/index.html
+++ b/index.html
@@ -206,42 +206,44 @@
           </li>
         </ul>
       </section>
-      <section class="services container">
-        <h2 class="visually-hidden">Сервисы предоставляемые интернет-магазином гаджетов &laquo;ДЕВАЙС&raquo;</h2>
-        <article class="slider-service">
-          <ul class="slide-service__list">
-            <li class="slide-service__item">
-              <button class="link link--active" type="button">Доставка</button>
-            </li>
-            <li class="slide-service__item">
-              <button class="link" type="button">Гарантия</button>
-            </li>
-            <li class="slide-service__item">
-              <button class="link" type="button">Кредит</button>
-            </li>
-          </ul>
-          <div class="slide-service slide-service_one">
-            <h3 class="slide-service__title">Доставка</h3>
-            <p class="slide-service__description">
-              Мы&nbsp;с&nbsp;удовольствием доставим выш товар прямо к&nbsp;вашему<br>подъезду совершенно бесплатно!
-              Ведь мы&nbsp;неплохо<br>заработаем, поднимая его на&nbsp;этаж.
-            </p>
-          </div>
-          <div class="slide-service slide-service_two visually-hidden">
-            <h3 class="slide-service__title">Гарантия</h3>
-            <p class="slide-service__description">
-              Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас сгорит дом&nbsp;&mdash;<br>
-              не&nbsp;переживайте, мы&nbsp;выдадим вам новый.<br>Товар, не&nbsp;дом, конечно&nbsp;же.
-            </p>
-          </div>
-          <div class="slide-service slide-service_three visually-hidden">
-            <h3 class="slide-service__title">Кредит</h3>
-            <p class="slide-service__description">
-              Залезть в&nbsp;долговую яму стало проще! Кредитные консультанты<br>подберут для вас наиболее выгодные<br>
-              условия кредита. Выгодные для нашего банка, разумеется.
-            </p>
-          </div>
-        </article>
+      <section class="services">
+        <div class="container">
+          <h2 class="visually-hidden">Сервисы предоставляемые интернет-магазином гаджетов &laquo;ДЕВАЙС&raquo;</h2>
+          <article class="slider-service">
+            <ul class="slide-service__list">
+              <li class="slide-service__item">
+                <a class="link link--service link--active" href="#">Доставка</a>
+              </li>
+              <li class="slide-service__item">
+                <a class="link link--service" href="#">Гарантия</a>
+              </li>
+              <li class="slide-service__item">
+                <a class="link link--service" href="#">Кредит</a>
+              </li>
+            </ul>
+            <div class="slide-service slide-service_one">
+              <h3 class="slide-service__title">Доставка</h3>
+              <p class="slide-service__description">
+                Мы&nbsp;с&nbsp;удовольствием доставим выш товар прямо к&nbsp;вашему<br>подъезду совершенно бесплатно!d
+                Ведь мы&nbsp;неплохо<br>заработаем, поднимая его на&nbsp;этаж.
+              </p>
+            </div>
+            <div class="slide-service slide-service_two visually-hidden">
+              <h3 class="slide-service__title">Гарантия</h3>
+              <p class="slide-service__description">
+                Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас сгорит дом&nbsp;&mdash;<br>
+                не&nbsp;переживайте, мы&nbsp;выдадим вам новый.<br>Товар, не&nbsp;дом, конечно&nbsp;же.
+              </p>
+            </div>
+            <div class="slide-service slide-service_three visually-hidden">
+              <h3 class="slide-service__title">Кредит</h3>
+              <p class="slide-service__description">
+                Залезть в&nbsp;долговую яму стало проще! Кредитные консультанты<br>подберут для вас наиболее выгодные<br>
+                условия кредита. Выгодные для нашего банка, разумеется.
+              </p>
+            </div>
+          </article>
+        </div>
       </section>
       <section class="popular-product container">
         <h2 class="visually-hidden">Популярные производители</h2>
