--- a/index.html
+++ b/index.html
@@ -287,15 +287,15 @@
             <li class="delivery-company__item">Автотрейдинг</li>
             <li class="delivery-company__item">ЖелДорЭкспедиция</li>
           </ul>
-          <a class="link" href="#">Подробнее о нас</a>
+          <a class="link link--about-us" href="#">Подробнее о нас</a>
         </section>
         <section class="contacts">
           <h2 class="contacts__title">Контакты</h2>
           <p class="contacts__description">Вы&nbsp;можете забрать товар сами, заехав в&nbsp;наш офис. Заодно, вы&nbsp;сможете<br>
             проверить работоспособность покупки. Всякое бывает.</p>
           <div class="map-block">
-            <img class="contacts__map-img" src="https://via.placeholder.com/150x100" alt="Наш адрес: г.Москва, улица Строителей, 15">
-            <a class="link" href="#">Напишите нам</a>
+            <iframe class="contacts__map-img" src="https://yandex.ru/map-widget/v1/-/CCUQQ0ao-B"></iframe>
+            <a class="link link--contacts" href="#">Напишите нам</a>
           </div>
         </section>
       </section>
