Добавил классов для стилизации

--- a/catalog.html
+++ b/catalog.html
@@ -112,34 +112,41 @@
             <fieldset class="filter__color">
               <legend class="filter__title-sort">Цвет:</legend>
               <p>
-                <input type="checkbox" id="color1" name="black" checked>
+                <input class="visually-hidden filter-input-checkbox filter-input"
+                type="checkbox" id="color1" name="black" checked>
                 <label class="filter__item" for="color1">Чёрный</label>
               </p>
               <p>
-                <input type="checkbox" id="color2" name="white">
+                <input class="visually-hidden filter-input-checkbox filter-input"
+                type="checkbox" id="color2" name="white">
                 <label class="filter__item" for="color2">Белый</label>
               </p>
               <p>
-                <input type="checkbox" id="color3" name="blue" checked>
+                <input class="visually-hidden filter-input-checkbox filter-input"
+                type="checkbox" id="color3" name="blue" checked>
                 <label class="filter__item" for="color3">Синий</label>
               </p>
               <p>
-                <input type="checkbox" id="color4" name="red" checked>
+                <input class="visually-hidden filter-input-checkbox filter-input"
+                type="checkbox" id="color4" name="red" checked>
                 <label class="filter__item" for="color4">Красный</label>
               </p>
               <p>
-                <input type="checkbox" id="color5" name="pink">
+                <input class="visually-hidden filter-input-checkbox filter-input"
+                type="checkbox" id="color5" name="pink">
                 <label class="filter__item" for="color5">Розовый</label>
               </p>
             </fieldset>
             <fieldset class="filter__bt">
               <legend class="filter__title-sort">Bluetooth:</legend>
               <p>
-                <input type="radio" id="b-yes" value="bluetooth-yes" name="filter-bluetooth" checked>
+                <input class="visually-hidden filter-input-radio filter-input"
+                type="radio" id="b-yes" value="bluetooth-yes" name="filter-bluetooth" checked>
                 <label class="filter__item" for="b-yes">Есть</label>
               </p>
               <p>
-                <input type="radio" id="b-no" value="bluetooth-тщ" name="filter-bluetooth">
+                <input class="visually-hidden filter-input-radio filter-input"
+                type="radio" id="b-no" value="bluetooth-тщ" name="filter-bluetooth">
                 <label class="filter__item" for="b-no">Нет</label>
               </p>
             </fieldset>
