--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,10 @@
             </form>
             <ul class="menu">
               <li class="menu__item">
-                <a class="menu__link link-enter" href="#">Войти</a>
+                <a class="menu__link link-user" href="#">Валентин Петухов</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link link-out" href="#">Выйти</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link link-compare" href="#">Сравнить</a>
@@ -109,18 +112,14 @@
               <div class="range-filter">
                 <div class="range-controls">
                   <div class="scale">
-                    <div class="bar" style="width: 66%;margin-left: 0%"></div>
+                    <div class="bar" style="width: 66%;margin-left: 0"></div>
                   </div>
-                  <div class="toggle toggle-min" tabindex="0" style="left: 0%"></div>
+                  <div class="toggle toggle-min" tabindex="0" style="left: 0"></div>
                   <div class="toggle toggle-max" tabindex="0" style="left: 60%"></div>
                 </div>
                 <div class="price-controls">
-                  <label class="min-price">
-                    от 0
-                  </label>
-                  <label class="max-price">
-                    до 5000
-                  </label>
+                  <label class="min-price">от 0</label>
+                  <label class="max-price">до 5000</label>
                 </div>
               </div>
             </fieldset>
@@ -179,12 +178,12 @@
           </div>
           <div class="sort-filter__arrow-nav">
             <a href="#" aria-label="По возрастанию">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+              <svg class="arrow arrow-up arrow-disabled" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                 <path fill="#231F20" d="M5.5 10L0 0h11"/>
               </svg>
             </a>
             <a href="#" aria-label="По убыванию">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+              <svg class="arrow arrow-down" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                 <path fill="#231F20" d="M5.5 10L0 0h11"/>
               </svg>
             </a>
