Добавлены классы для стилизации, в футер добавил имя пользователя

--- a/catalog.html
+++ b/catalog.html
@@ -125,27 +125,27 @@
             </fieldset>
             <fieldset class="filter__color">
               <legend class="filter__title-sort">Цвет:</legend>
-              <p>
+              <p class="filter__item-list">
                 <input class="visually-hidden filter-input-checkbox filter-input"
                 type="checkbox" id="color1" name="black" checked>
                 <label class="filter__item" for="color1">Чёрный</label>
               </p>
-              <p>
+              <p class="filter__item-list">
                 <input class="visually-hidden filter-input-checkbox filter-input"
                 type="checkbox" id="color2" name="white">
                 <label class="filter__item" for="color2">Белый</label>
               </p>
-              <p>
+              <p class="filter__item-list">
                 <input class="visually-hidden filter-input-checkbox filter-input"
                 type="checkbox" id="color3" name="blue" checked>
                 <label class="filter__item" for="color3">Синий</label>
               </p>
-              <p>
+              <p class="filter__item-list">
                 <input class="visually-hidden filter-input-checkbox filter-input"
                 type="checkbox" id="color4" name="red" checked>
                 <label class="filter__item" for="color4">Красный</label>
               </p>
-              <p>
+              <p class="filter__item-list">
                 <input class="visually-hidden filter-input-checkbox filter-input"
                 type="checkbox" id="color5" name="pink">
                 <label class="filter__item" for="color5">Розовый</label>
@@ -153,12 +153,12 @@
             </fieldset>
             <fieldset class="filter__bt">
               <legend class="filter__title-sort">Bluetooth:</legend>
-              <p>
+              <p class="filter__item-list">
                 <input class="visually-hidden filter-input-radio filter-input"
                 type="radio" id="b-yes" value="bluetooth-yes" name="filter-bluetooth" checked>
                 <label class="filter__item" for="b-yes">Есть</label>
               </p>
-              <p>
+              <p class="filter__item-list">
                 <input class="visually-hidden filter-input-radio filter-input"
                 type="radio" id="b-no" value="bluetooth-тщ" name="filter-bluetooth">
                 <label class="filter__item" for="b-no">Нет</label>
@@ -264,7 +264,10 @@
         <div class="page__footer--wrapper">
           <ul class="menu menu--low">
             <li class="menu__item menu__item--low">
-              <a class="menu__link menu__link--low menu__link--low-enter" href="#">Войти</a>
+              <a class="menu__link menu__link--low menu__link--low-enter" href="#">Валентин Петухов</a>
+            </li>
+            <li class="menu__item menu__item--low">
+              <a class="menu__link menu__link--low" href="#">Выйти</a>
             </li>
             <li class="menu__item menu__item--low">
               <a class="menu__link menu__link--low menu__link--low-compare" href="#">Сравнить</a>
